--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,109 +1,35 @@
-version: "3.4"
+version: '3.8'
 
 services:
   api:
-    image: ghcr.io/saleor/saleor:3.20
+    image: saleor/saleor:3.0
+    environment:
+      DATABASE_URL: postgres://saleor:saleor@db/saleor
+      REDIS_URL: redis://redis:6379/0
     ports:
-      - 8000:8000
-    restart: unless-stopped
-    networks:
-      - saleor-backend-tier
-    stdin_open: true
-    tty: true
+      - "8000:8000"
     depends_on:
       - db
       - redis
-      - jaeger
-    volumes:
-      # shared volume between worker and api for media
-      - saleor-media:/app/media
-    env_file:
-      - common.env
-      - backend.env
-    environment:
-      - JAEGER_AGENT_HOST=jaeger
-      - DASHBOARD_URL=http://localhost:9000/
-      - ALLOWED_HOSTS=localhost,api
 
   dashboard:
-    image: ghcr.io/saleor/saleor-dashboard:latest
+    image: saleor/dashboard:3.0
     ports:
-      - 9000:80
-    restart: unless-stopped
+      - "9003:80"
+    depends_on:
+      - api
 
   db:
-    image: library/postgres:15-alpine
-    ports:
-      - 5432:5432
-    restart: unless-stopped
-    networks:
-      - saleor-backend-tier
-    volumes:
-      - saleor-db:/var/lib/postgresql/data
-      - ./replica_user.sql:/docker-entrypoint-initdb.d/replica_user.sql
+    image: postgres:12
     environment:
-      - POSTGRES_USER=saleor
-      - POSTGRES_PASSWORD=saleor
+      POSTGRES_DB: saleor
+      POSTGRES_USER: saleor
+      POSTGRES_PASSWORD: saleor
+    ports:
+      - "5432:5432"
 
   redis:
-    image: library/redis:7.0-alpine
+    image: redis:6
     ports:
-      - 6379:6379
-    restart: unless-stopped
-    networks:
-      - saleor-backend-tier
-    volumes:
-      - saleor-redis:/data
+      - "6379:6379"
 
-  worker:
-    image: ghcr.io/saleor/saleor:3.20
-    command: celery -A saleor --app=saleor.celeryconf:app worker --loglevel=info -B
-    restart: unless-stopped
-    networks:
-      - saleor-backend-tier
-    env_file:
-      - common.env
-      - backend.env
-    depends_on:
-      - redis
-      - mailpit
-    volumes:
-      # shared volume between worker and api for media
-      - saleor-media:/app/media
-
-  jaeger:
-    image: jaegertracing/all-in-one
-    ports:
-      - "5775:5775/udp"
-      - "6831:6831/udp"
-      - "6832:6832/udp"
-      - "5778:5778"
-      - "16686:16686"
-      - "14268:14268"
-      - "9411:9411"
-    restart: unless-stopped
-    networks:
-      - saleor-backend-tier
-    volumes:
-      - type: tmpfs
-        target: /tmp
-
-  mailpit:
-    image: axllent/mailpit
-    ports:
-      - 1025:1025 # smtp server
-      - 8025:8025 # web ui. Visit http://localhost:8025/ to check emails
-    restart: unless-stopped
-    networks:
-      - saleor-backend-tier
-
-volumes:
-  saleor-db:
-    driver: local
-  saleor-redis:
-    driver: local
-  saleor-media:
-
-networks:
-  saleor-backend-tier:
-    driver: bridge
