--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -14,28 +14,23 @@ spec:
     spec:
       containers:
       - name: saleor-api
-        image: saleor/saleor:3.0
+        image: saleor/saleor:latest  # Updated to use the latest tag
         ports:
         - containerPort: 8000
-        env:
-        - name: DATABASE_URL
-          value: postgres://saleor:saleor@db/saleor
-        - name: REDIS_URL
-          value: redis://redis:6379/0
         resources:
           requests:
             cpu: "500m"
             memory: "512Mi"
           limits:
-            cpu: "1000m"
-            memory: "1024Mi"
+            cpu: "1"
+            memory: "1Gi"
       - name: saleor-dashboard
-        image: saleor/dashboard:3.0
+        image: saleor/dashboard:latest  # Updated to use the latest tag
         ports:
         - containerPort: 80
         resources:
           requests:
-            cpu: "200m"
+            cpu: "250m"
             memory: "256Mi"
           limits:
             cpu: "500m"
